--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Codefiction typescript book ceviri projesi",
   "main": "src/index.js",
   "scripts": {
-    "test": "karma start",
+    "test": "jasmine-node tests/",
     "start": "npm run build:live",
     "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts"
   },
@@ -19,26 +19,42 @@
   },
   "homepage": "https://github.com/msusur/typescript-book#readme",
   "dependencies": {
+    "@types/core-js": "^0.9.35",
+    "@types/expect.js": "^0.3.29",
+    "@types/mocha": "^2.2.33",
+    "expect.js": "^0.3.1",
     "hunspell-spellchecker": "^1.0.2",
+    "mocha": "^3.1.2",
     "node-dir": "^0.1.16",
     "nodehun": "^2.0.11",
     "rxjs": "^5.1.0"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.35",
+    "@types/expect.js": "^0.3.29",
+    "@types/mocha": "^2.2.33",
     "@types/node": "^7.0.5",
     "@types/node-dir": "0.0.30",
+    "babel-polyfill": "^6.22.0",
+    "browserify": "^14.0.0",
+    "expect.js": "^0.3.1",
+    "gulp": "^3.9.1",
+    "gulp-jasmine": "^2.4.2",
+    "gulp-tsc": "^1.2.6",
+    "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.4.1",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-browserify": "^5.1.1",
-    "karma-es6-shim": "^1.0.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-requirejs": "^0.2.6",
+    "jasmine-node": "^1.14.5",
+    "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
+    "ntypescript": "^1.201609302242.1",
+    "reflect-metadata": "^0.1.9",
     "requirejs": "^2.3.2",
+    "run-sequence": "^1.2.2",
+    "sourcemap": "^0.1.0",
     "ts-node": "^2.0.0",
     "typescript": "^2.1.5",
-    "watchify": "^3.9.0"
+    "typings": "^2.1.0",
+    "watchify": "^3.9.0",
+    "zone.js": "^0.7.6"
   }
 }
